src/main/java/com/zaze/kotlin/example/test/TestJava.java
package com.zaze.kotlin.example.test;

public class TestJava {


    public static void main(String[] args) {
//        int a = 0;
//        new Runnable() {
//            @Override
//            public void run() {
//                a = 3; // error
//            }
//        };


    }
}
